# SiEPICfab-EBeam-ZEP-PDK

./: .gitattributes  Dockerfile  LICENSE.md  MANIFEST.in  README.md  ZEP_Surface_Taper.py  components.md  draft_layout.gds  grain.xml  howto_developers.md  pyproject.toml  test.gds  test_static.oas
.github/workflows/: ZEP_Tests.yml  docker-image.yml  python-publish.yml  run-layout-tests.yml
SiEPICfab_EBeam_ZEP/: SiEPICfab_EBeam_ZEP.lyp  SiEPICfab_EBeam_ZEP.lyt  Verification.xml  WAVEGUIDES.xml  WAVEGUIDES_legacy.xml  WAVEGUIDES_lukasc.xml
SiEPICfab_EBeam_ZEP/drc/: ELEC463-2021.lydrc  SiEPICfab_EBeam_ZEP.lydrc
SiEPICfab_EBeam_ZEP/pymacros/: SiEPICfab_EBeam_ZEP_Library.lym  SiEPICfab_EBeam_ZEP_Library.py  SiEPICfab_EBeam_ZEP_beta_Library.lym  SiEPICfab_EBeam_ZEP_beta_Library.py  SiEPICfab_ZEP_export.py  ZEP_Lib_PCellTests.py  __init__.py  export (IP replacement).lym  export (IP replacement, flat).lym  export_for_fabrication (flat).lym  export_for_fabrication.lym  extract_EBL_regions.lym
installer/: Windows.bat
siepicfab_ebeam_zep/: DFT.xml  SiEPICfab_EBeam_ZEP.lyp  WAVEGUIDES.xml  WAVEGUIDES_lukasc.xml  __init__.py  pyproject.toml
siepicfab_ebeam_zep/drc/: SiEPICfab_EBeam_ZEP.lydrc
siepicfab_ebeam_zep/pymacros/: SiEPICfab_EBeam_ZEP_beta_Library.lym  SiEPICfab_ZEP_export.py  __init__.py  custom_exceptions.py  export (IP replacement).lym  export_for_fabrication (flat).lym  export_for_fabrication.lym  extract_EBL_regions.lym  extract_EBL_regions_example.gds  extract_EBL_regions_example_EBLfields.txt  test_All_Library_Cells.py
(+214 files in other folders)
