[tool.setuptools]
packages = [
  "siepicfab_ebeam_zep",
]


[project]
name = "siepicfab_ebeam_zep"
version = "0.1.4"
authors = [
  { name="Lukas Chrostowski", email="lukasc@ece.ubc.ca" },
]
description = "SiEPICfab_EBeam_ZEP_PDK: process design kit (PDK) for fabrication using electron beam lithography, and a library silicon photonics components. "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "SiEPIC>=0.5.20",
  "numpy",
  "packaging",
]


[project.urls]
Homepage = "https://github.com/SiEPIC/SiEPICfab-EBeam-ZEP-PDK"
Issues = "https://github.com/SiEPIC/SiEPICfab-EBeam-ZEP-PDK/issues"

